[gd_scene load_steps=38 format=3 uid="uid://efyk5lcypy46"]

[ext_resource type="Theme" uid="uid://cv1iypx64a8up" path="res://data/elementary_dark.theme" id="1_xp6o1"]
[ext_resource type="Script" path="res://src/main_menu.gd" id="2_25c8g"]
[ext_resource type="Texture2D" uid="uid://d1pw1gwbl32go" path="res://data/images/pattern1.png" id="2_gewds"]
[ext_resource type="FontFile" uid="uid://454rsovevigv" path="res://data/fonts/static/Inter_18pt-Light.ttf" id="3_4ocu8"]
[ext_resource type="Texture2D" uid="uid://ts2oev1wvlgn" path="res://data/images/logo.png" id="5_06hnn"]
[ext_resource type="FontFile" uid="uid://bd5bg8ilefl3k" path="res://data/fonts/static/Inter_18pt-Medium.ttf" id="5_i60c7"]
[ext_resource type="Texture2D" uid="uid://bwru6g17io61v" path="res://data/images/button_glow.png" id="7_hqjne"]
[ext_resource type="FontFile" uid="uid://yv1jlquoy7e7" path="res://data/fonts/static/Inter_18pt-Regular.ttf" id="7_pl0ky"]
[ext_resource type="FontFile" uid="uid://b47ipy6hmu1r8" path="res://data/fonts/static/Inter_18pt-Bold.ttf" id="8_76era"]
[ext_resource type="PackedScene" uid="uid://denh6gklpmatv" path="res://prefabs/ui/spin_button.tscn" id="10_b15wa"]
[ext_resource type="PackedScene" uid="uid://dc212eswkcucm" path="res://prefabs/loading_screen.tscn" id="10_i3341"]
[ext_resource type="PackedScene" uid="uid://c723x15ban0q6" path="res://prefabs/ui/radio_button.tscn" id="10_p52f1"]
[ext_resource type="Texture2D" uid="uid://bwujeqsk2p077" path="res://data/icons/diff_normal.png" id="11_xx4sp"]
[ext_resource type="Texture2D" uid="uid://vkwpm8prnu3h" path="res://data/icons/diff_hard.png" id="12_sr57i"]
[ext_resource type="AudioStream" uid="uid://dsdt7v0bp288e" path="res://data/audio/ui_focus.ogg" id="13_e28y3"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ocs45"]
blend_mode = 1
light_mode = 2

[sub_resource type="Animation" id="Animation_i35qh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.12549)]
}

[sub_resource type="Animation" id="Animation_oy1vs"]
resource_name = "throb"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 1.33333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.12549), Color(1, 1, 1, 1), Color(1, 1, 1, 0.614118), Color(1, 1, 1, 0.196078)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r37iy"]
_data = {
"RESET": SubResource("Animation_i35qh"),
"throb": SubResource("Animation_oy1vs")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a15uu"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.972549, 0.972549, 0.972549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.556863)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2gcho"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hcsv0"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kq5lt"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhwkq"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vl1ud"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_doa5r"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkkhg"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mre3w"]
bg_color = Color(0.952941, 0.952941, 0.952941, 1)

[sub_resource type="Theme" id="Theme_rd2qt"]
default_font = ExtResource("7_pl0ky")
default_font_size = 12
Button/colors/font_color = Color(0.2, 0.2, 0.2, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("5_i60c7")
Button/styles/hover = SubResource("StyleBoxFlat_a15uu")
Button/styles/normal = SubResource("StyleBoxFlat_a15uu")
Label/colors/font_color = Color(0.2, 0.2, 0.2, 1)
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("7_pl0ky")
MenuButton/styles/focus = SubResource("StyleBoxFlat_2gcho")
MenuButton/styles/hover = SubResource("StyleBoxFlat_hcsv0")
MenuButton/styles/normal = SubResource("StyleBoxFlat_kq5lt")
MenuButton/styles/pressed = SubResource("StyleBoxFlat_fhwkq")
OptionButton/colors/font_color = Color(0.2, 0.2, 0.2, 1)
OptionButton/styles/hover = SubResource("StyleBoxFlat_vl1ud")
OptionButton/styles/normal = SubResource("StyleBoxFlat_doa5r")
OptionButton/styles/pressed = SubResource("StyleBoxFlat_hkkhg")
Panel/styles/panel = SubResource("StyleBoxFlat_mre3w")

[sub_resource type="Gradient" id="Gradient_a07ae"]
offsets = PackedFloat32Array(0, 0.011889, 1)
colors = PackedColorArray(1, 1, 1, 0.0941176, 1, 1, 1, 0.0392157, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mdura"]
gradient = SubResource("Gradient_a07ae")
width = 24
height = 24
fill_to = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pdifx"]
font_size = 12

[sub_resource type="ButtonGroup" id="ButtonGroup_i56fe"]

[sub_resource type="ButtonGroup" id="ButtonGroup_1qn6d"]

[sub_resource type="ButtonGroup" id="ButtonGroup_i6fu0"]

[sub_resource type="Gradient" id="Gradient_lpqq3"]
colors = PackedColorArray(0.976471, 0.768627, 0.25098, 0.588235, 0.831373, 0.556863, 0.0823529, 0.67451)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_unl5y"]
gradient = SubResource("Gradient_lpqq3")
width = 24
height = 24
fill_to = Vector2(0, 1)

[node name="MainMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xp6o1")
script = ExtResource("2_25c8g")
metadata/_edit_use_anchors_ = true

[node name="Pattern" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.12549)
self_modulate = Color(0.709724, 0.57287, 0.365661, 0.721569)
material = SubResource("CanvasItemMaterial_ocs45")
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gewds")
expand_mode = 3
stretch_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pattern"]
root_node = NodePath("../Light")
libraries = {
"": SubResource("AnimationLibrary_r37iy")
}

[node name="Timer" type="Timer" parent="Pattern/AnimationPlayer"]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Light" type="PointLight2D" parent="Pattern"]
position = Vector2(398, 180)
scale = Vector2(1.98837, 1.98837)
energy = 0.0
shadow_item_cull_mask = 0
texture = ExtResource("7_hqjne")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -80.0
offset_right = 184.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
texture_filter = 4
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
texture = ExtResource("5_06hnn")
expand_mode = 1
stretch_mode = 5

[node name="Subtitle" type="Label" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.752941)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4ocu8")
theme_override_font_sizes/font_size = 24
text = "Cleanse the divine realms."
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 24

[node name="ArenaSizeLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_76era")
theme_override_font_sizes/font_size = 12
text = "Arena Size"

[node name="ArenaSizeSelect" type="OptionButton" parent="VBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
icon_alignment = 2
expand_icon = true
selected = 0
fit_to_longest_item = false
item_count = 6
popup/item_0/text = "7 x 7"
popup/item_1/text = "9 x 9"
popup/item_1/id = 1
popup/item_2/text = "17 x 9"
popup/item_2/id = 2
popup/item_3/text = "17 x 17"
popup/item_3/id = 3
popup/item_4/text = "27 x 17"
popup/item_4/id = 4
popup/item_5/text = "Custom"
popup/item_5/id = 5

[node name="Gradient" type="TextureRect" parent="VBoxContainer/ArenaSizeSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rd2qt")
texture = SubResource("GradientTexture2D_mdura")
expand_mode = 1

[node name="CustomSizeBox" type="GridContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
columns = 3

[node name="GridLengthLabel" type="Label" parent="VBoxContainer/CustomSizeBox"]
layout_mode = 2
text = "Grid Length"
label_settings = SubResource("LabelSettings_pdifx")

[node name="EmptyLabel" type="Label" parent="VBoxContainer/CustomSizeBox"]
layout_mode = 2
text = "
"
label_settings = SubResource("LabelSettings_pdifx")

[node name="GridWidthLabel" type="Label" parent="VBoxContainer/CustomSizeBox"]
layout_mode = 2
text = "Grid Width
"
label_settings = SubResource("LabelSettings_pdifx")

[node name="GridLength" parent="VBoxContainer/CustomSizeBox" instance=ExtResource("10_b15wa")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/CustomSizeBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "×"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridWidth" parent="VBoxContainer/CustomSizeBox" instance=ExtResource("10_b15wa")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Difficulty" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_76era")
theme_override_font_sizes/font_size = 12
text = "Difficulty"

[node name="DifficultyBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="EasyButton" parent="VBoxContainer/DifficultyBox" instance=ExtResource("10_p52f1")]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_i56fe")
label = "Initiate"

[node name="MediumButton" parent="VBoxContainer/DifficultyBox" instance=ExtResource("10_p52f1")]
layout_mode = 2
button_group = SubResource("ButtonGroup_1qn6d")
label = "Acolyte"
main_icon = ExtResource("11_xx4sp")

[node name="HardButton" parent="VBoxContainer/DifficultyBox" instance=ExtResource("10_p52f1")]
layout_mode = 2
button_group = SubResource("ButtonGroup_i6fu0")
main_icon = ExtResource("12_sr57i")

[node name="Scenario" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_76era")
theme_override_font_sizes/font_size = 12
text = "Scenario"

[node name="ArenaThemeSelect" type="OptionButton" parent="VBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
icon_alignment = 2
expand_icon = true
selected = 0
fit_to_longest_item = false
allow_reselect = true
item_count = 3
popup/item_0/text = "Hades's vengeance upon the Pantheon"
popup/item_1/text = "Eris's mischief in Eden Glades"
popup/item_1/id = 1
popup/item_2/text = "Typhon's wrath in the Temple of Judgment"
popup/item_2/id = 2

[node name="Gradient" type="TextureRect" parent="VBoxContainer/ArenaThemeSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rd2qt")
texture = SubResource("GradientTexture2D_mdura")
expand_mode = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Gradient" type="TextureRect" parent="VBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_unl5y")

[node name="Label" type="Label" parent="VBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.976471, 0.768627, 0.25098, 1)
theme_override_fonts/font = ExtResource("5_i60c7")
theme_override_font_sizes/font_size = 12
text = "Begin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Button" parent="VBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
text = "Quit"

[node name="LoadingScreen" parent="." instance=ExtResource("10_i3341")]
z_index = 4096
layout_mode = 1

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Audio" type="Node" parent="."]

[node name="UIFocusSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("13_e28y3")
volume_db = 2.0
bus = &"Effects"

[node name="SettingsPopup" type="Popup" parent="."]
msaa_2d = 1
title = "Settings"
initial_position = 2
size = Vector2i(420, 250)
wrap_controls = false
transient_to_focused = true
borderless = false
force_native = true

[node name="Panel" type="Panel" parent="SettingsPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsPopup/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPopup/Panel/MarginContainer"]
layout_mode = 2

[node name="GraphicsQuality" type="Label" parent="SettingsPopup/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_76era")
theme_override_font_sizes/font_size = 12
text = "Graphics Quality"

[node name="GfxSlider" type="HSlider" parent="SettingsPopup/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
max_value = 3.0
value = 1.0
rounded = true
tick_count = 4
ticks_on_borders = true

[node name="HSeparator" type="HSeparator" parent="SettingsPopup/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="MasterVolume" type="Label" parent="SettingsPopup/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_76era")
theme_override_font_sizes/font_size = 12
text = "Master Volume"

[node name="MaVolumeSlider" type="HSlider" parent="SettingsPopup/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
min_value = -72.0
max_value = 0.0
step = 2.0
value = -34.0
rounded = true

[node name="MusicVolume" type="Label" parent="SettingsPopup/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_76era")
theme_override_font_sizes/font_size = 12
text = "Music Volume"

[node name="MuVolumeSlider" type="HSlider" parent="SettingsPopup/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
min_value = -72.0
max_value = 0.0
step = 2.0
value = -46.0
rounded = true

[node name="MarginContainer2" type="MarginContainer" parent="SettingsPopup/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPopup/Panel/MarginContainer2"]
layout_mode = 2

[node name="CancelBtn" type="Button" parent="SettingsPopup/Panel/MarginContainer2/HBoxContainer"]
clip_children = 2
custom_minimum_size = Vector2(72, 28)
layout_mode = 2
text = "Cancel"

[node name="SaveBtn" type="Button" parent="SettingsPopup/Panel/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(72, 28)
layout_mode = 2

[node name="Gradient" type="TextureRect" parent="SettingsPopup/Panel/MarginContainer2/HBoxContainer/SaveBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_unl5y")

[node name="Label" type="Label" parent="SettingsPopup/Panel/MarginContainer2/HBoxContainer/SaveBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.976471, 0.768627, 0.25098, 1)
theme_override_fonts/font = ExtResource("5_i60c7")
theme_override_font_sizes/font_size = 12
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FocusTimer" type="Timer" parent="SettingsPopup"]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="Pattern/AnimationPlayer/Timer" to="Pattern/AnimationPlayer" method="play" binds= ["throb"]]
[connection signal="focus_entered" from="VBoxContainer/ArenaSizeSelect" to="Audio/UIFocusSound" method="play"]
[connection signal="item_focused" from="VBoxContainer/ArenaSizeSelect" to="Audio/UIFocusSound" method="play"]
[connection signal="item_selected" from="VBoxContainer/ArenaSizeSelect" to="." method="set_arena_size"]
[connection signal="changed" from="VBoxContainer/CustomSizeBox/GridLength" to="." method="on_change_grid_length"]
[connection signal="changed" from="VBoxContainer/CustomSizeBox/GridWidth" to="." method="on_change_grid_width"]
[connection signal="focus_entered" from="VBoxContainer/DifficultyBox/EasyButton" to="Audio/UIFocusSound" method="play"]
[connection signal="pressed" from="VBoxContainer/DifficultyBox/EasyButton" to="VBoxContainer/DifficultyBox/MediumButton" method="_uncheck"]
[connection signal="pressed" from="VBoxContainer/DifficultyBox/EasyButton" to="VBoxContainer/DifficultyBox/HardButton" method="_uncheck"]
[connection signal="focus_entered" from="VBoxContainer/DifficultyBox/MediumButton" to="Audio/UIFocusSound" method="play"]
[connection signal="pressed" from="VBoxContainer/DifficultyBox/MediumButton" to="VBoxContainer/DifficultyBox/EasyButton" method="_uncheck"]
[connection signal="pressed" from="VBoxContainer/DifficultyBox/MediumButton" to="VBoxContainer/DifficultyBox/HardButton" method="_uncheck"]
[connection signal="focus_entered" from="VBoxContainer/DifficultyBox/HardButton" to="Audio/UIFocusSound" method="play"]
[connection signal="pressed" from="VBoxContainer/DifficultyBox/HardButton" to="VBoxContainer/DifficultyBox/EasyButton" method="_uncheck"]
[connection signal="pressed" from="VBoxContainer/DifficultyBox/HardButton" to="VBoxContainer/DifficultyBox/MediumButton" method="_uncheck"]
[connection signal="focus_entered" from="VBoxContainer/ArenaThemeSelect" to="Audio/UIFocusSound" method="play"]
[connection signal="item_focused" from="VBoxContainer/ArenaThemeSelect" to="Audio/UIFocusSound" method="play"]
[connection signal="item_selected" from="VBoxContainer/ArenaThemeSelect" to="." method="set_arena_theme"]
[connection signal="focus_entered" from="VBoxContainer/PlayButton" to="Audio/UIFocusSound" method="play"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="play_ui_accept_sound"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="begin"]
[connection signal="focus_entered" from="VBoxContainer/Settings" to="Audio/UIFocusSound" method="play"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="open_settings"]
[connection signal="focus_entered" from="VBoxContainer/QuitButton" to="Audio/UIFocusSound" method="play"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="quit"]
[connection signal="timeout" from="LoadTimer" to="." method="load_arena"]
[connection signal="focus_entered" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/GfxSlider" to="Audio/UIFocusSound" method="play"]
[connection signal="value_changed" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/GfxSlider" to="." method="on_change_gfx_fidelity"]
[connection signal="value_changed" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/GfxSlider" to="Audio/UIFocusSound" method="play"]
[connection signal="focus_entered" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/MaVolumeSlider" to="Audio/UIFocusSound" method="play"]
[connection signal="value_changed" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/MaVolumeSlider" to="." method="on_change_master_volume"]
[connection signal="value_changed" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/MaVolumeSlider" to="Audio/UIFocusSound" method="play"]
[connection signal="focus_entered" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/MuVolumeSlider" to="Audio/UIFocusSound" method="play"]
[connection signal="value_changed" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/MuVolumeSlider" to="." method="on_change_music_volume"]
[connection signal="value_changed" from="SettingsPopup/Panel/MarginContainer/VBoxContainer/MuVolumeSlider" to="Audio/UIFocusSound" method="play"]
[connection signal="focus_entered" from="SettingsPopup/Panel/MarginContainer2/HBoxContainer/CancelBtn" to="Audio/UIFocusSound" method="play"]
[connection signal="pressed" from="SettingsPopup/Panel/MarginContainer2/HBoxContainer/CancelBtn" to="." method="cancel_settings"]
[connection signal="pressed" from="SettingsPopup/Panel/MarginContainer2/HBoxContainer/SaveBtn" to="." method="confirm_settings"]
[connection signal="timeout" from="SettingsPopup/FocusTimer" to="SettingsPopup/Panel/MarginContainer/VBoxContainer/GfxSlider" method="grab_focus"]
